[package]
authors = ["Felix Prasanna <fpx@mit.edu>"] 
description = "Container that runs effects when updated"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/effect_cell"
readme = "README.md"
name = "effect_cell"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fprasx/effect-cell"
homepage = "https://github.com/fprasx/effect-cell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
